<resources>
    <string name="app_name">MaterialDesign</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_tab_library">Tabs with Library</string>
    <string name="next">Next</string>
    <string name="title_activity_sub">SubActivity</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    
    <string-array name="tabs">
        <item>TAB 1</item>
        <item>TAB 2</item>
        <item>TAB 3</item>
        <item>TAB 4</item>
        <item>TAB 5</item>
        <item>TAB 6</item>
    </string-array>
    <string name="title_activity_activity_using_tab_library">ActivityUsingTabLibrary</string>
    <string name="title_activity_vector_test">VectorTestActivity</string>
    <string name="error_timeout">Oops! Your Connection Timed Out</string>
    <string name="error_auth_failure">Oops! RottenTomatoes Says It Doesn\'t Recognize You</string>
    <string name="error_network">Oops! RottenTomatoes Server Just Messed Up</string>
    <string name="error_parser">Oops! Data Received Was An Unreadable Mess</string>
    <string name="title_activity_activity_recycler_item_animations">ActivityRecyclerItemAnimations</string>
    <string name="add_item">Add Item</string>
</resources>
